# MatCo

./: CMakeLists.txt  MatCo.sh  README.md  main.cpp
example/experiment/query_graph/dblp/10/: Q_09xRQ8PK.graph  Q_5yahng85.graph  Q_70e34gmm.graph  Q_BayWZ0TY.graph  Q_CGScvt3N.graph  Q_F4BEyAr8.graph  Q_FhoC29td.graph  Q_GfPjdWSZ.graph  Q_I5FUv8U6.graph  Q_J7cjQK1l.graph  Q_Jbua6kTk.graph  Q_NnX8KOdL.graph  Q_Pyn29jUL.graph  Q_Q7ROoA0z.graph  Q_UFdupBK0.graph  Q_VaXx4I5o.graph  Q_Vuwxk4EN.graph  Q_Wknra8Fm.graph  Q_YAxB3Tpn.graph  Q_ZDoXiu0C.graph  Q_hSrRZabe.graph  Q_i2WPkGnK.graph  Q_lLspTmuB.graph  Q_lf2Fx9M3.graph  Q_pzXwLPq3.graph  Q_r1NObiU4.graph  Q_sVcupXjM.graph  Q_w3q8ztok.graph  Q_x9nA30gS.graph  Q_y6qaxXlt.graph
example/experiment/query_graph/dblp/12/: Q_0Tl8LSgV.graph  Q_20GH8oKc.graph  Q_4r5JSTJX.graph  Q_7n0ULBVY.graph  Q_9kUfys8S.graph  Q_AF7mofNa.graph  Q_BYE0eO3e.graph  Q_C5nk6BuO.graph  Q_CuxT4psV.graph  Q_DLSwM8zz.graph  Q_GjnGI8a8.graph  Q_HNCwXElT.graph  Q_Ldyf9rAc.graph  Q_NwDmwy0z.graph  Q_OwVoZwRy.graph  Q_Oz2KV3h3.graph  Q_XVryXm6C.graph  Q_azdoALFq.graph  Q_cheKFdYu.graph  Q_d5A5BEUG.graph  Q_kWrmemNr.graph  Q_mB5G1jmM.graph  Q_mOom5NJ9.graph  Q_maxeb0Cn.graph  Q_nVwYOO9G.graph  Q_rL3u6DKg.graph  (+4 more)
example/query_graph/: query_1.graph  query_1_kv.txt  query_2.graph  query_2_kv.txt  query_3.graph  query_3_kv.txt  query_4.graph  query_4_kv.txt  query_5.graph  query_5_kv.txt  query_6.graph
graph/: graph.cpp  graph.h
matching/: MatchCover.cpp  MatchCover.h  matching.cpp  matching.h
utils/: globals.cpp  globals.h  timer.hpp  types.h  utils.h
(+1117 files in other folders)
